[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/root/popups/config/AppSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/ratings/esrb/E.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/load.svg" type="Texture" id=3]
[ext_resource path="res://assets/ratings/pegi/3.png" type="Texture" id=4]
[ext_resource path="res://assets/ratings/cero/A.png" type="Texture" id=5]

[node name="AppSettings" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 617.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Game library directory:"

[node name="GameLibDir" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 632.0
margin_right = 932.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
focus_mode = 0
editable = false

[node name="SetGamePath" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 947.0
margin_right = 1024.0
margin_bottom = 30.0
text = "Choose"
icon = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 617.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Theme:"

[node name="Themes" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 632.0
margin_right = 866.0
margin_bottom = 30.0
rect_min_size = Vector2( 234, 30 )

[node name="SetThemePath" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 881.0
margin_right = 1024.0
margin_bottom = 30.0
text = "Open theme path"
icon = ExtResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 8.0
margin_right = 720.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Language:"

[node name="Language" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "English (en)"
items = [ "English (en)", null, false, 0, null ]
selected = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_top = 8.0
margin_right = 720.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Region:"

[node name="Region" type="OptionButton" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "USA"
items = [ "USA", null, false, 0, null, "Europe", null, false, 1, null, "Japan", null, false, 2, null ]
selected = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 1024.0
margin_bottom = 216.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_top = 33.0
margin_right = 870.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Rating system:"

[node name="RatingSystem" type="OptionButton" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 874.0
margin_right = 1024.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 80 )
text = "ESRB"
icon = ExtResource( 2 )
expand_icon = true
items = [ "ESRB", ExtResource( 2 ), false, 0, null, "PEGI", ExtResource( 4 ), false, 1, null, "CERO", ExtResource( 5 ), false, 2, null ]
selected = 0

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 1024.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_top = 8.0
margin_right = 720.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Date format:"

[node name="DateFormat" type="OptionButton" parent="VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
margin_left = 724.0
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "MM/DD/YYYY"
items = [ "MM/DD/YYYY", null, false, 0, null, "DD/MM/YYYY", null, false, 1, null, "YYYY/MM/DD", null, false, 2, null ]
selected = 0

[node name="SetupWizardButton" type="Button" parent="VBoxContainer"]
margin_left = 862.0
margin_top = 254.0
margin_right = 1024.0
margin_bottom = 274.0
size_flags_horizontal = 8
text = "Re-run first time wizard"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_left = 984.0
margin_top = 278.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 8
text = "Quit"

[connection signal="hide" from="." to="." method="_on_AppSettings_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SetGamePath" to="." method="_on_SetGamePath_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SetThemePath" to="." method="_on_SetThemePath_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer3/Language" to="." method="_on_Language_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer4/Region" to="." method="_on_Region_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer5/RatingSystem" to="." method="_on_RatingSystem_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer6/DateFormat" to="." method="_on_DateFormat_item_selected"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_Quit_pressed"]
